Remove hardcoded strings and add them to strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">DevOpsApp</string>
+    <string name="second_screen">Second screen</string>
+    <string name="send">Send</string>
+    <string name="enter_message">Enter Message</string>
 </resources>
